# calculatorMax-Rust

./: Cargo.toml
.github/workflows/: ci.yml
src/calculator/: evaluator.rs
src/i18n/locales/: cat.json
tests/: integration_tests.rs
