[package]
name = "calculator-max"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GUI框架 (optional to speed iterative builds)
egui = { version = "0.28", optional = true }
eframe = { version = "0.28", optional = true }

# 数学计算
statrs = "0.17"
rand = "0.9"

# 表达式解析
meval = "0.2"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# System locale detection
sys-locale = "0.3"

# System directories
dirs = "5.0"

[features]
# Keep GUI enabled by default for normal builds; disable with --no-default-features for a faster dev build
default = ["gui", "embedded-fonts"]
gui = ["egui", "eframe"]
embedded-fonts = []
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

[package.metadata.bundle]
name = "Calculator Max"
identifier = "com.calculator.max"
version = "0.1.0"
resources = []
copyright = "Copyright (c) 2025"
category = "Utilities"
short_description = "A powerful calculator"
long_description = "Calculator Max - A feature-rich calculator application"

